# wlr-autorotate

./: .gitignore  CMakeLists.txt  Makefile  PKGBUILD  README.md
src/: display.c  display.h  main.c  orientation.c  orientation.h
